# server-research-mcp

./: .env.example  .gitattributes  .gitignore  COMPLETE_RATE_LIMITING_FIX.md  CONTEXT7_API_FIX_SUMMARY.md  QUICK_FIX_GUIDE.md  RATE_LIMITING_FIX_IMPLEMENTATION.md  RATE_LIMITING_TEST_FIX_PLAN.md  README.md  REFACTORING_SUMMARY.md  check_zotero.py  debug_zotero_params.py  dum.example  e2e.out  example.env  fix_rate_limiting_tests.py  int.out  main.py  package.json  pyproject.toml  pytest.ini  run.py  test_mcp_fix.py  test_mcpadapt_migration.py  test_researcher_agent.py  test_schema_guidance.py  test_simple_researcher.py  test_zotero_debug.py  test_zotero_integration.py  unit.out
chromadb/: __init__.py
crewai/: __init__.py
docs/: crew_freeze_fix.md  mcp_setup_guide.md  rate_limiting.md  schema_guided_output.md
interfaces/: __init__.py  _types.py  protocols.py
knowledge/: InterruptedCompletionPatterns.md  paperSchema.json  paperTemplate.md
knowledge/parsedContext/: crewai_HITL.md  crewai_agents.md  crewai_annotations.md  crewai_eventListeners.md  crewai_modelcontextprotocol.md  crewai_observability.md  crewai_planning.md  crewai_prompts.md  crewai_research_architecture.json  crewai_tasks.md  crewai_testing.md  crewai_training.md
mmd/: README.md
mmd/pytest/: 00_testing_overview.md  01_testing_patterns.md
mmd/src/: 00_project_overview.md  01_core_architecture.md  02_mcp_tools_architecture.md  03_system_analysis_summary.md
scripts/: zotero_diagnostics.py
src/server_research_mcp/: README.md  __init__.py  crew.py  main.py  rate_limiter.py
tests/: CONSOLIDATION_SUMMARY.md  README.md  README_TESTS.md  __init__.py  conftest.py  pytest.ini  run_ci_tests.py  test_agents.py  test_crew_core.py  test_end_to_end.py  test_suite_summary.py
tests/adapters/: test_core.py  test_crewai_adapter.py
tests/alphaReady/: run_alpha_tests.py  test_alpha_readiness.py  test_real_integration.py
tests/core/: test_agent_ecosystem.py  test_mcp_integration.py
tests/e2e/: __init__.py  test_research_flow.py  test_workflows.py
tests/fixtures/: __init__.py  enhanced_conftest.py  mcp_fixtures.py
tests/integration/: __init__.py  (+12 more)
testsArchive/: run_tests.py  test_knowledge_management.py  test_mcp_integration.py  test_mcp_real_integration.py  test_research_paper_parser.py  test_run_all.py  test_suite_summary.json
tiktoken/: __init__.py
(+62 files in other folders)
