[project]
name = "server-research-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "anthropic>=0.55.0",
    "crewai>=0.86.0",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.2.0",
    "mcp>=1.10.1",
    "openai>=1.93.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.15",
    "jsonschema>=4.23.0",
    "psutil>=5.9.0",
    "zotero-mcp>=0.1.6",
]
